--- a/homepage.css
+++ b/homepage.css
@@ -324,6 +324,7 @@ form>button{
     font-size: 16px;
 }
 
+ /* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
   footer{
     width: 100%;
     height: 500px;
