--- a/homepage.css
+++ b/homepage.css
@@ -26,9 +26,8 @@ body{
 form{
     display: flex;
 }
-form>button{
-    height: 100%;
-}
+
+
 
 #search-bar{
     display: flex;
@@ -64,7 +63,7 @@ form>button{
     border-left: 1px solid rgb(49, 47, 47);
    
 }
-#search-bar>form>input{
+#inputsearch{
     width: 80%;
     
     height: 100%;
@@ -72,7 +71,7 @@ form>button{
     border: 0.3px solid rgb(181, 181, 181);
    
 }
-#search-bar>form>button{
+#searchbtn{
     width: 20%;
     height: 108%;
     background-color:rgb(233, 176, 187);
@@ -455,10 +454,41 @@ form>button{
     width: 100%;
 }
 #fetch-product{
+    display: flex;
+    height: 450px;
+    overflow: auto;
+    white-space: nowrap;
     width: 100%;
-    height: 300px;
-    border: 6px solid red;
 }
+#fetch-product>div{
+    margin-left: 20px;
+    margin-top: 10px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+#fetch-product>div>img{
+    width: 230px;
+    height: 280px;
+}
+#fetch-product>div>h4{
+    margin-left: 7px;
+    font-family: cursive;
+    font-size: 18px;
+    margin-bottom: 5px;
+ }
+ #fetch-product>div>h6{
+     margin-left: 7px;
+     font-size: 20px;
+     margin-top: 0px;
+     color: #3e8e41;
+     margin-bottom: 10px;
+ }
+ #fetch-product>div>p{
+     margin-left: 7px;
+     font-size: 21px;
+     margin-top: 0px;
+     color: black;
+     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+ }
 #feedback{
     margin-top: 60px;
     height: 450px;
