--- a/cart.css
+++ b/cart.css
@@ -1,7 +1,7 @@
 
 .cartcont {
     margin: 50px auto;
-    width: 80%;
+    width: 70%;
   }
   
   .cartcont>div {
@@ -18,7 +18,7 @@
   
   .cartcont>div>div:nth-child(1)>img {
     width: 100%;
-    height: 350px;
+    /* height: 350px; */
   }
   
   .cartcont>div>div:nth-child(1)>img:hover {
@@ -71,7 +71,7 @@
     padding: 5px 120px 5px 120px;
     color: white;
     border: none;
-    background-color: rgb(49, 41, 154);
+    background-color: rgb(255, 141, 164);
   }
   
   .carttotal {
@@ -82,18 +82,8 @@
     padding: 5px 15px 5px 15px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 93%;
-    background-color: rgb(49, 66, 188);
+    background-color: rgb(255, 141, 164);
     color: white;
-  }
-  
-  .cart-empty {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-  }
-  .cart-empty img{
-    width: 80%;
   }
   
   .hide-div {
@@ -119,8 +109,11 @@
   
   
   .summary {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin: auto;
-    width: 450px;
+    width: 100%;
     box-sizing: border-box;
   }
   
@@ -128,6 +121,8 @@
   
   .summary-subtotal,
   .summary-total {
+    display: flex;
+    width: 100%;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     clear: both;
@@ -148,6 +143,7 @@
     
   }
   #basket-total{
+    width: 100%;
     font-size: 1.975rem;
   }
   .summary-promo {
@@ -198,7 +194,7 @@
     text-transform: uppercase;
     padding: 0.625rem 0;
     width: 100%;
-    background-color:rgb(49, 66, 188);
+    background-color:rgb(255, 141, 164);
     color: white;
   
     border: 0ch;
@@ -212,21 +208,39 @@
     height: 34px;
     width: 100%;
   }
-  .gradient-custom {
-    /* fallback for old browsers */
-    background: #6a11cb;
-    
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-    }
-
-    .product_img{
-
-      width: 350px;
-    }
   
-  
+    @media screen and (max-width:780px){
+      .cartcont>div{
+          flex-direction: column;
+          margin: auto;
+      }
+      .main_pro{
+
+        margin: auto;
+      }
+      .cartcont>div>div:nth-child(1) {
+        width: 100%;
+        overflow: hidden;
+        height: 350px;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+      }
+
+  }
+  @media screen and (max-width:580px){
+    .cartcont>div{
+      flex-direction: column;
+      margin: auto;
+  }
+  .main_pro{
+
+    margin: auto;
+  }
+  .cartcont>div>div:nth-child(1) {
+    width: 100%;
+    overflow: hidden;
+    height: 350px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  }
+    
+}
    
