--- a/SignUp/SignUp.css
+++ b/SignUp/SignUp.css
@@ -105,9 +105,9 @@ input{
     margin-bottom: 70px;
 }
 #left>div>p{
-    margin-bottom: 150px;
+    margin-bottom: 130px;
     padding-left: 20px;
-    padding-right: 20px;
+    /* padding-right: 20px; */
     line-height: 30px;
     font-size: 18px;
 }
