--- a/homepage.css
+++ b/homepage.css
@@ -560,12 +560,12 @@ font-family: cursive;
     margin-left: 30px;
   }
 
-  @media screen {
+  @media (min-width:300px) and (max-width:700px) {
     #brands{
         display: flex;
         width: 100%;
        
-        height: 40px;
+        height: 30px;
         justify-content: space-around;
         align-items: center;
     }
