--- a/SignUp/SignUp.css
+++ b/SignUp/SignUp.css
@@ -29,6 +29,10 @@ body{
     font-size: 16px;
     border-radius: 15px;
 }
+#shortmsg{
+    margin-left: 5px;
+    margin-right: 20px;
+}
 #right{
     width: 50%;
     display: flex;
@@ -110,6 +114,201 @@ input{
     /* padding-right: 20px; */
     line-height: 30px;
     font-size: 18px;
+}
+@media screen and (min-width : 700px) and (max-width: 900px) {
+    #maincontainer{
+        width: 80%;
+        /* margin: auto;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        justify-content: center; */
+    }
+    /* #left{
+        background-color:rgb(233, 176, 187);
+        height: 500px;
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        /* justify-content: space-between; */
+        /* width: 40%; */
+        /* padding: 20px; */
+        /* opacity: 85%; */
+        /* font-size: 16px; */
+        /* border-radius: 15px; */
+    /* } */
+    /* #right{ */
+        /* width: 50%; */
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* justify-content: space-around; */
+        /* background-color: rgb(255, 230, 235); */
+        /* padding: 20px; */
+        /* height: 500px; */
+        /* border-radius: 15px; */
+    /* } */ 
+}
+@media screen and (min-width : 600px) and (max-width: 699px) {
+    #maincontainer{
+        width: 90%;
+        /* margin: auto;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        justify-content: center; */
+    }
+    /* #left{
+        background-color:rgb(233, 176, 187);
+        height: 500px;
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        /* justify-content: space-between; */
+        /* width: 40%; */
+        /* padding: 20px; */
+        /* opacity: 85%; */
+        /* font-size: 16px; */
+        /* border-radius: 15px; */
+    /* } */
+    /* #right{ */
+        /* width: 50%; */
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* justify-content: space-around; */
+        /* background-color: rgb(255, 230, 235); */
+        /* padding: 20px; */
+        /* height: 500px; */
+        /* border-radius: 15px; */
+    /* } */
+}
+@media screen and (min-width : 440px) and (max-width: 599px) {
+    #maincontainer{
+        width: 95%;
+        flex-direction: column;
+        /* margin: auto;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        justify-content: center; */
+    }
+    #inputdetail{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 10px;
+        margin-bottom: 15px;
+    }
+    #inputdetail>div{
+        width: 100%;
+    }
+    #left{
+
+        /* display: none; */
+        /* background-color:rgb(233, 176, 187); */
+        height: auto;
+        /* display: flex; */
+        /* text-align: center; */
+        /* flex-direction: column; */
+        /* justify-content: space-between; */
+        width: 60%;
+        padding: 0px;
+        margin-top: 20px;
+        /* opacity: 85%; */
+        /* font-size: 16px; */
+        /* border-radius: 15px; */
+    }
+    #left img{
+        width: 100%;
+        /* height: 50px; */
+        /* opacity: 100%; */
+        border-radius: 15px;
+        margin: 0px;
+    }
+    #left>div:nth-child(3),#left>div:nth-child(2){
+        display: none;
+    }
+    #inputdetail{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 10px;
+        margin-bottom: 15px;
+    }
+    #inputdetail>div{
+        width: 100%;
+    }
+    #right{ 
+        width: 70%;
+        /* display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: rgb(255, 230, 235);
+        padding: 20px;*/
+        margin-top: 20px;
+        margin-bottom: 20px;
+        height: auto; 
+        /* border-radius: 15px;  */
+    }
+}
+@media screen and (min-width : 100px) and (max-width: 439px) {
+    #maincontainer{
+        width: 95%;
+        flex-direction: column;
+        /* margin: auto;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        justify-content: center; */
+    }
+    #left{
+        /* width: 80%; */
+        /* display: none; */
+        /* background-color:rgb(233, 176, 187); */
+        height: auto;
+        /* display: flex;
+        text-align: center;
+        flex-direction: column;
+        justify-content: space-between; */
+        width: 60%;
+        /* height: 70px; */
+        padding: 0px;
+        margin-top: 20px;
+        /* opacity: 85%;
+        font-size: 16px;
+        border-radius: 15px; */
+    }
+    #left img{
+        width: 100%;
+        /* height: 50px; */
+        /* opacity: 100%; */
+        border-radius: 15px;
+        margin: 0px;
+    }
+    #left>div:nth-child(3),#left>div:nth-child(2){
+        display: none;
+    }
+    #inputdetail{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 10px;
+        margin-bottom: 15px;
+    }
+    #inputdetail>div{
+        width: 100%;
+    }
+    #right{ 
+        width: 80%;
+        /* display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: rgb(255, 230, 235);
+        padding: 20px; */
+        height: auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        /* border-radius: 15px; */
+    }
 }
 
 
