--- a/admin.css
+++ b/admin.css
@@ -15,7 +15,7 @@
 }
 
 .material-symbols-outlined {
-    font-size: 35px !important;
+    font-size: 30px !important;
     margin: 20px 0px;
     cursor: pointer;
 }
@@ -35,7 +35,7 @@
 .icontext {
     cursor: pointer;
     padding-left: 20px;
-    font-size: 25px;
+    font-size: 28px;
 }
 
 #moreinfo {
@@ -81,35 +81,43 @@ body {
 
 .navicon {
     font-size: 48px;
+    cursor: pointer;
 }
 
 #task_name {
     margin-left: 20px;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 /* recent task 4 div */
+
 #recntTask {
     height: 20vh;
     box-sizing: border-box;
     padding: 0px 20px;
     display: grid;
+    /* border: 2px solid red; */
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
     align-items: center;
     margin-bottom: 1vh;
 }
 
+#recntTask>div>div>p {
+    font-size: 30px;
+}
+
 #TotalItems>div,
 #NewlyAdded>div,
 #TotalEdited>div,
 #TotalDeleted>div {
+    height: 100%;
     background-color: rgb(203, 231, 249);
     border: 2px solid rgb(61, 200, 255);
     border-radius: 10px;
     border-top-left-radius: 0px;
-    padding: 20px 10px;
-    font-size: 25px;
+    padding: 0px 10px;
+    font-size: 20px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
@@ -134,7 +142,7 @@ body {
 #newtotal,
 #newedit,
 #newdelete {
-    font-size: 35px;
+    font-size: 25px;
 }
 
 /* admin Details */
@@ -160,7 +168,7 @@ body {
     padding: 20px;
     border-top-right-radius: 20px;
     box-sizing: border-box;
-    font-size: 30px;
+    font-size: 35px;
     height: 100%;
 }
 
@@ -325,7 +333,7 @@ body {
 }
 
 @media screen and (max-width:900px) {
-    #adminadname {
+    #adminadname>p{
         font-size: 20px;
     }
 
@@ -334,17 +342,25 @@ body {
     }
 
     #recntTask>div>div>p {
-        font-size: 24px;
+        font-size: 18px;
     }
 }
 
 @media screen and (max-width:750px) {
     #recntTask {
+        /* border: 2px solid red; */
         height: 25vh;
         grid-template-rows: auto auto;
         grid-template-columns: repeat(2, 1fr);
         gap: 10px;
         padding-right: 5px;
+    }
+
+    #newadd,
+    #newtotal,
+    #newedit,
+    #newdelete {
+        font-size: 15px;
     }
 
     #adminDetails {
@@ -354,20 +370,22 @@ body {
         flex-direction: column;
     }
 
-    #adminadname {
+    #adminadname{
         height: 40%;
-        font-size: 20px;
         padding: 10px;
-        font-size: 20px;
+        font-size: 15px;
         /* height: 100%; */
     }
 
     #recntTask>div>div>img {
         width: 50px;
     }
+    #recntTask>div>div{
+        padding: 5px 0px ;
+    }
 
     #recntTask>div>div>p {
-        font-size: 24px;
+        font-size: 20px;
 
     }
 
@@ -379,15 +397,16 @@ body {
     #newtotal,
     #newedit,
     #newdelete {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     #adminadname>h4 {
-        padding-bottom: 10px;
+        padding-bottom: 5px;
     }
 
     #adminadname>p {
-        padding-bottom: 5px;
+        padding-bottom: 3px;
+        font-size: 15px;
     }
 
     #gitimg {
@@ -450,14 +469,16 @@ body {
 
     #updateproduct,
     #addproduct {
-       
+
         grid-template-rows: auto auto;
         grid-template-columns: auto;
     }
+
     #addform,
     #updateform {
-       grid-row: 1;
+        grid-row: 1;
     }
+
     #addform>form,
     #updateform>form {
         width: 70%;
@@ -474,8 +495,46 @@ body {
         font-size: 15px;
         border-radius: 0px;
     }
+
     #addrender,
     #updaterender {
         height: 60vh;
+    }
+}
+@media screen and (max-width:600px) {
+    #recntTask>div>div>p {
+        font-size: 15px;
+    }
+    #newadd,
+    #newtotal,
+    #newedit,
+    #newdelete {
+        font-size: 20px;
+    }
+    #asidenav>div>p>span:nth-child(1){
+        font-size: 25px;
+    }
+    #asidenav {
+        min-width: 30px;
+    }
+    #gitimg {
+        width: 30px;
+    }
+}
+@media screen and (max-width:1300px) {
+    #adminadname {
+        font-size: 25px;
+    }
+    #recntTask>div>div>p {
+        font-size: 20px;
+    }
+    .icontext {
+        font-size: 23px;
+        padding-left: 15px;
+    }
+}
+@media screen and (max-width:400px) {
+    #recntTask>div>div>p {
+        font-size: 15px;
     }
 }
